--- a/assignment5.html
+++ b/assignment5.html
@@ -8,20 +8,36 @@
     <title>Assignment5</title>
 </head>
 <body>
-<div class="block">
-    <div class="header"></div>
-    <div class="grid-container">
-        <div id="grid-item" class="grid-item">1</div>
-        <div id="grid-item" class="grid-item">2</div>
-        <div id="grid-item" class="grid-item">3</div>
-        <div id="grid-item" class="grid-item">4</div>
-        <div id="grid-item" class="grid-item">5</div>
-        <div id="grid-item" class="grid-item">6</div>
-        <div id="grid-item" class="grid-item">7</div>
-        <div id="grid-item" class="grid-item">8</div>
-        <div id="grid-item" class="grid-item">9</div>
-      </div>
-    
+  <div>
+<table class="table" id="table">
+  <tr class="row">
+    <td id="1" class="cell" onmousedown="mouseDown(this.id)" onmouseup="mouseUp(this.id)" onmousemove="mouseMove(this.id)" onclick=addColor(this.id)></td>
+    <td id="2" class="cell" onmousedown="mouseDown(this.id)" onmouseup="mouseUp(this.id)" onmousemove="mouseMove(this.id)" onclick=addColor(this.id)></td>
+  </tr>
+  <tr class="row">
+  <td id="3" class="cell" onmousedown="mouseDown(this.id)" onmouseup="mouseUp(this.id)" onmousemove="mouseMove(this.id)" onclick=addColor(this.id)></td>
+    <td id="4" class="cell" onmousedown="mouseDown(this.id)" onmouseup="mouseUp(this.id)" onmousemove="mouseMove(this.id)" onclick=addColor(this.id)></td>
+  </tr>
+
+ 
+</table>
+  
+</div>
+
+<button onclick="addRow()" id="addRow">Add a Row </button>
+<button onclick="addColumn()" id="addColumn"> Add a Column</button>
+<button onclick="removeRow()" id="removeRow">Remove a Row </button>
+<button onclick="removeColumn()" id="removeColumn"> Remove a Column</button>
+<button onclick="colorAllUncoloredCells()" id="removeColumn">Color All Uncolored Cells</button>
+<select onchange="selectColor(this.value)" id="color"> 
+  <option value="">Select a Color</option>
+  <option value="salmon">Salmon</option>
+  <option value="bisque">Bisque</option>
+  <option value="green">Green</option>
+</select>
+<button onclick="fillAllCells()"id="fillAllCells">Fill All Cells</button>
+<button onclick="clearAllCells()"id="clear">Clear </button>
+
     <div class="footer">
     </div>
    <script src="assignment5.js"></script>
