--- a/assignment5.html
+++ b/assignment5.html
@@ -12,7 +12,8 @@
 <table class="table" id="table">
   <tr class="row">
     <td id="1" class="cell" onmousedown="mouseDown(this.id)" onmouseup="mouseUp(this.id)" onmousemove="mouseMove(this.id)" onclick=addColor(this.id)></td>
-    <td id="2" class="cell" onmousedown="mouseDown(this.id)" onmouseup="mouseUp(this.id)" onmousemove="mouseMove(this.id)" onclick=addColor(this.id)></td>
+    <td id="2" class="cell" onmousedown="mouseDown(this.id)" onmouseupcd ..
+    git ="mouseUp(this.id)" onmousemove="mouseMove(this.id)" onclick=addColor(this.id)></td>
   </tr>
   <tr class="row">
   <td id="3" class="cell" onmousedown="mouseDown(this.id)" onmouseup="mouseUp(this.id)" onmousemove="mouseMove(this.id)" onclick=addColor(this.id)></td>
